5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1642_652.log
== TEST (2019-04-15 15:58:08) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a%10
res=a//b
if(res==0):
	print("SIM")
ELSE:
	print("NAO")
-- ERROR:
File "XXXX", line 7
    ELSE:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:58:17) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a%10
res=a//b
if(res==0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:58:57) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a%10
res=a//b

if(res == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:59:22) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a%100
res=a//b

if(res == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:59:56) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a//100
res=a%b

if(res == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:00:03) 
-- CODE:
a=int(input("digite um numero de tres digitos: "))

b=a//100
res=a%b

if(res == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.19528
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
